--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
 
     <!-- стилі -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 
     <title>WebStudio</title>
   </head>
@@ -29,33 +29,33 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo-color-up">Studio</span></a
         >
-        <nav class="main-nav">
+        <nav class="nav-main">
           <ul class="nav-list">
-            <li class="nav-list-item">
-              <a class="navigation current" href="./index.html">Студия</a>
+            <li class="nav-list_item">
+              <a class="nav_link current" href="./index.html">Студия</a>
             </li>
-            <li class="nav-list-item">
-              <a class="navigation" href="./portfolio.html">Портфолио</a>
+            <li class="nav-list_item">
+              <a class="nav_link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-list-item">
-              <a class="navigation" href="#link">Контакты</a>
+            <li class="nav-list_item">
+              <a class="nav_link" href="#link">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <ul class="contacts">
-          <li class="contact-item">
-            <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12" class="heder-icon">
+          <li class="contact_item">
+            <a class="contact_link" href="mailto:info@devstudio.com">
+              <svg width="16" height="12" class="contact_icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li class="contact-item">
-            <a class="contact-link" href="tel:+380961111111">
-              <svg width="10" height="16" class="heder-icon">
+          <li class="contact_item">
+            <a class="contact_link" href="tel:+380961111111">
+              <svg width="10" height="16" class="contact_icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
@@ -85,49 +85,49 @@
           <h2 class="visually-hidden">Наши характеристики</h2>
           <ul class="flex">
             <li class="benefits-item">
-              <div class="benefits-icon-wrap">
+              <div class="benefits-icon_wrap">
                 <svg width="70" height="70" class="benefits-icon">
                   <use href="./images/icons.svg#icon-Antena"></use>
                 </svg>
               </div>
 
-              <h3 class="description">Внимание к деталям</h3>
+              <h3 class="benefits-item_descrip">Внимание к деталям</h3>
               <p class="about">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrap">
+              <div class="benefits-icon_wrap">
                 <svg width="70" height="70" class="benefits-icon">
                   <use href="./images/icons.svg#icon-Clock"></use>
                 </svg>
               </div>
-              <h3 class="description">Пунктуальность</h3>
+              <h3 class="benefits-item_descrip">Пунктуальность</h3>
               <p class="about">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrap">
+              <div class="benefits-icon_wrap">
                 <svg width="70" height="70" class="benefits-icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="description">Планирование</h3>
+              <h3 class="benefits-item_descrip">Планирование</h3>
               <p class="about">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
             <li class="benefits-item">
-              <div class="benefits-icon-wrap">
+              <div class="benefits-icon_wrap">
                 <svg width="70" height="70" class="benefits-icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="description">Современные технологии</h3>
+              <h3 class="benefits-item_descrip">Современные технологии</h3>
               <p class="about">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -141,38 +141,38 @@
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="flex">
-            <li class="specialization-item">
-              <img class="spec-img"
+            <li class="about-item">
+              <img class="about-item_img"
                 src="./images/coding1.jpg"
                 alt="кодинг"
                 width="370"
                 height="294"
               />
-<div class="spec-item-box">
-<p class="spec-item-descrip">декстопные приложения</p>
+<div class="about-item_box">
+<p class="about-item_descrip">декстопные приложения</p>
 </div>
             </li>
-            <li class="specialization-item">
-              <img class="spec-img"
+            <li class="about-item">
+              <img class="about-item_img"
                 src="./images/Phone2.jpg"
                 alt="мобильная разработка"
                 width="370"
                 height="294"
               />
-<div class="spec-item-box">
-<p class="spec-item-descrip">мобильные приложения</p>
+<div class="about-item_box">
+<p class="about-item_descrip">мобильные приложения</p>
 </div>
             </li>
 
-            <li class="specialization-item">
-              <img class="spec-img"
+            <li class="about-item">
+              <img class="about-item_img"
                 src="./images/tablet3.jpg"
                 alt="подбор цветов в дизайне"
                 width="370"
                 height="294"
               />
-<div class="spec-item-box">
-<p class="spec-item-descrip">дизайнерские решения</p>
+<div class="about-item_box">
+<p class="about-item_descrip">дизайнерские решения</p>
 </div>
             </li>
           </ul>
