--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo-color-up">Studio</span></a
         >
-        <nav class="nav-main">
+        <nav class="nav">
           <ul class="nav-list">
             <li class="nav-list_item">
               <a class="nav_link current" href="./index.html">Студия</a>
@@ -43,7 +43,7 @@
           </ul>
         </nav>
 
-        <ul class="contacts">
+        <ul class="contact">
           <li class="contact_item">
             <a class="contact_link" href="mailto:info@devstudio.com">
               <svg width="16" height="12" class="contact_icon">
@@ -500,7 +500,7 @@
   <div class="justify-btn">
   <label for="email"></label>
   <input class="subscribe-input" type="email" name="email" placeholder="E-mail" id="email">
-  <button type="submit" class="footer-btn">Подписаться
+  <button type="submit" class="subscribe-btn">Подписаться
 <svg width="24" height="24" class="subscribe-icon">
   <use href="./images/icons.svg#icon-icon-send"></use>
   </button>
