--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo-color-up">Studio</span></a
         >
-        <nav class="nav-main">
+        <nav class="nav">
           <ul class="nav-list">
             <li class="nav-list_item">
               <a class="nav_link" href="./index.html">Студия</a>
@@ -46,7 +46,7 @@
           </ul>
         </nav>
 
-        <ul class="contacts">
+        <ul class="contact">
           <li class="contact_item">
             <a class="contact_link" href="mailto:info@devstudio.com">
               <svg width="16" height="12" class="contact_icon">
@@ -412,7 +412,7 @@
   <div class="justify-btn">
   <label for="email"></label>
   <input class="subscribe-input" type="email" name="email" placeholder="E-mail" id="email">
-  <button type="submit" class="footer-btn">Подписаться
+  <button type="submit" class="subscribe-btn">Подписаться
 <svg width="24" height="24" class="subscribe-icon">
   <use href="./images/icons.svg#icon-icon-send"></use>
   </button>
