--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,18 @@
     <header class="header">
       <div class="container">
         <a class="logo" href="./index.html"
-          >Web<span class="logo-color-up">Studio</span></a
+          >Web<span class="logo logo__color--up">Studio</span></a
         >
         <nav class="nav">
-          <ul class="nav-list">
-            <li class="nav-list_item">
-              <a class="nav_link" href="./index.html">Студия</a>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="./index.html">Студия</a>
             </li>
-            <li class="nav-list_item">
-              <a class="nav_link current" href="./portfolio.html"
-                >Портфолио</a
-              >
+            <li class="nav__item">
+               <a class="nav__link nav__link--current"  href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-list_item">
-              <a class="nav_link" href="#link">Контакты</a>
+            <li class="nav__item">
+              <a class="nav__link" href="#link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -74,27 +72,27 @@
           <!-- прихований заголовок -->
           <h1 class="visually-hidden">Портфолио</h1>
 
-          <ul class="porfolio-nav">
-            <li class="porfolio-nav_filter">
-              <button class="button-style" type="button">Все</button>
+          <ul class="portfolio">
+            <li class="portfolio__filter">
+              <button class="button__style" type="button">Все</button>
             </li>
-            <li class="porfolio-nav_filter">
-              <button class="button-style" type="button">Веб-сайты</button>
+            <li class="portfolio__filter">
+              <button class="button__style" type="button">Веб-сайты</button>
             </li>
-            <li class="porfolio-nav_filter">
-              <button class="button-style" type="button">Приложения</button>
+            <li class="portfolio__filter">
+              <button class="button__style" type="button">Приложения</button>
             </li>
-            <li class="porfolio-nav_filter">
-              <button class="button-style" type="button">Дизайн</button>
+            <li class="portfolio__filter">
+              <button class="button__style" type="button">Дизайн</button>
             </li>
-            <li class="porfolio-nav_filter">
-              <button class="button-style" type="button">Маркетинг</button>
+            <li class="portfolio__filter">
+              <button class="button__style" type="button">Маркетинг</button>
             </li>
           </ul>
 
-          <ul class="portfolio-list">
+          <ul class="portfolio__list">
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img1.jpeg"
@@ -112,15 +110,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Технокряк</h2>
-                  <p class="item-description">Веб-сайт</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Технокряк</h2>
+                  <p class="item__description">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img2.jpeg"
@@ -138,17 +136,17 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="item-description">Дизайн</p>
+                  <p class="item__description">Дизайн</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img3.jpeg"
@@ -166,15 +164,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Ресторан Seafood</h2>
-                  <p class="item-description">Приложение</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Ресторан Seafood</h2>
+                  <p class="item__description">Приложение</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img4.jpeg"
@@ -192,15 +190,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Проект Prime</h2>
-                  <p class="item-description">Маркетинг</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Проект Prime</h2>
+                  <p class="item__description">Маркетинг</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img5.jpeg"
@@ -218,15 +216,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Проект Boxes</h2>
-                  <p class="item-description">Приложение</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Проект Boxes</h2>
+                  <p class="item__description">Приложение</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img6.jpeg"
@@ -244,17 +242,17 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion" lang="en">
+                <div class="item__border">
+                  <h2 class="portfolio__descripion" lang="en">
                     Inspiration has no Borders
                   </h2>
-                  <p class="item-description">Веб-сайт</p>
+                  <p class="item__description">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img7.jpeg"
@@ -272,15 +270,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Издание Limited Edition</h2>
-                  <p class="item-description">Дизайн</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Издание Limited Edition</h2>
+                  <p class="item__description">Дизайн</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img8.jpeg"
@@ -298,15 +296,15 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion">Проект LAB</h2>
-                  <p class="item-description">Маркетинг</p>
+                <div class="item__border">
+                  <h2 class="portfolio__descripion">Проект LAB</h2>
+                  <p class="item__description">Маркетинг</p>
                 </div>
               </a>
             </li>
 
             <li class="item">
-              <a class="item-link" href="#">
+              <a class="item__link" href="#">
                 <div class="card-thumb">
                   <img
                     src="./images/portfolio/port_img9.jpeg"
@@ -324,11 +322,11 @@
                   </div>
                 </div>
 
-                <div class="items-border">
-                  <h2 class="portfolio-descripion" lang="en">
+                <div class="item__border">
+                  <h2 class="portfolio__descripion" lang="en">
                     Growing Business
                   </h2>
-                  <p class="item-description">Приложение</p>
+                  <p class="item__description">Приложение</p>
                 </div>
               </a>
             </li>
@@ -339,13 +337,13 @@
 
     <footer>
       <div class="container footer">
-        <div class="address-container">
+        <div class="address__container">
           <a class="logo down" href="./index.html"
-            >Web<span class="logo-color-down">Studio</span></a
+            >Web<span class="logo__color--down">Studio</span></a
           >
           <address>
-            <ul class="address-list">
-              <li class="address-item">
+            <ul class="address__list">
+              <li class="address__item">
                 <a
                   class="address"
                   href="https://goo.gl/maps/3G3DzynHdaxkbTKc9"
@@ -354,16 +352,16 @@
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="address-item">
+              <li class="address__item">
                 <a
-                  class="address-link"
+                  class="address__link"
                   id="link"
                   href="mailto:info@devstudio.com"
                   >info@example.com</a
                 >
               </li>
-              <li class="address-item">
-                <a class="address-link" href="tel:+380961111111">
+              <li class="address__item">
+                <a class="address__link" href="tel:+380961111111">
                   +380961111111</a
                 >
               </li>
@@ -372,34 +370,34 @@
         </div>
         <div class="join">
           <p class="join-us">присоединяйтесь</p>
-          <ul class="socials-list">
-            <li class="socials-item">
-              <a href="#" class="socials-link" aria-label="instagram">
-                <svg width="20" height="20" class="socials-icon">
+          <ul class="socials__list">
+            <li class="socials__item">
+              <a href="#" class="socials__link" aria-label="instagram">
+                <svg width="20" height="20" class="socials__icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="socials-item">
-              <a href="#" class="socials-link" aria-label="twitter">
-                <svg width="20" height="20" class="socials-icon">
+            <li class="socials__item">
+              <a href="#" class="socials__link" aria-label="twitter">
+                <svg width="20" height="20" class="socials__icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="socials-item">
-              <a href="#" class="socials-link" aria-label="fecebook">
-                <svg width="20" height="20" class="socials-icon">
+            <li class="socials__item">
+              <a href="#" class="socials__link" aria-label="fecebook">
+                <svg width="20" height="20" class="socials__icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="socials-item">
-              <a href="#" class="socials-link" aria-label="linkedin">
-                <svg width="20" height="20" class="socials-icon">
+            <li class="socials__item">
+              <a href="#" class="socials__link" aria-label="linkedin">
+                <svg width="20" height="20" class="socials__icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -407,16 +405,16 @@
           </ul>
         </div>
 
-<form class="subscribe-us">
+<form class="subscribe">
   <h3 class="join-us">подпишитесь на рассылку</h3>
-  <div class="justify-btn">
+
   <label for="email"></label>
-  <input class="subscribe-input" type="email" name="email" placeholder="E-mail" id="email">
-  <button type="submit" class="subscribe-btn">Подписаться
-<svg width="24" height="24" class="subscribe-icon">
+  <input class="subscribe__input" type="email" name="email" placeholder="E-mail" id="email">
+  <button type="submit" class="subscribe__btn">Подписаться
+<svg width="24" height="24" class="subscribe__icon">
   <use href="./images/icons.svg#icon-icon-send"></use>
   </button>
-</div>
+
 </svg>
 </form>
 
