--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
         </nav>
 
         <ul class="contact">
-          <li class="contact_item">
-            <a class="contact_link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12" class="contact_icon">
+          <li class="contact__item">
+            <a class="contact__link" href="mailto:info@devstudio.com">
+              <svg width="16" height="12" class="contact__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li class="contact_item">
-            <a class="contact_link" href="tel:+380961111111">
-              <svg width="10" height="16" class="contact_icon">
+          <li class="contact__item">
+            <a class="contact__link" href="tel:+380961111111">
+              <svg width="10" height="16" class="contact__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
@@ -92,7 +92,7 @@
               </div>
 
               <h3 class="benefits__descrip">Внимание к деталям</h3>
-              <p class="about">
+              <p class="benefits__about">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
@@ -104,7 +104,7 @@
                 </svg>
               </div>
               <h3 class="benefits__descrip">Пунктуальность</h3>
-              <p class="about">
+              <p class="benefits__about">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
@@ -116,7 +116,7 @@
                 </svg>
               </div>
               <h3 class="benefits__descrip">Планирование</h3>
-              <p class="about">
+              <p class="benefits__about">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
@@ -128,7 +128,7 @@
                 </svg>
               </div>
               <h3 class="benefits__descrip">Современные технологии</h3>
-              <p class="about">
+              <p class="benefits__about">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -191,9 +191,9 @@
                 width="270"
                 height="260"
               />
-              <div class="name__wrap">
-                <h3 class="name">Игорь Демьяненко</h3>
-                <p class="name__job" lang="en">Product Designer</p>
+              <div class="team__wrap">
+                <h3 class="team__name">Игорь Демьяненко</h3>
+                <p class="team__job" lang="en">Product Designer</p>
                 <ul class="socials__list">
                   <li class="socials__item">
                     <a href="#" class="socials__link">
@@ -234,9 +234,9 @@
                 width="270"
                 height="260"
               />
-              <div class="name__wrap">
-                <h3 class="name">Ольга Репина</h3>
-                <p class="name__job" lang="en">Frontend Developer</p>
+              <div class="team__wrap">
+                <h3 class="team__name">Ольга Репина</h3>
+                <p class="team__job" lang="en">Frontend Developer</p>
                 <ul class="socials__list">
                   <li class="socials__item">
                     <a href="#" class="socials__link">
@@ -280,9 +280,9 @@
                 width="270"
                 height="260"
               />
-              <div class="name__wrap">
-                <h3 class="name">Николай Тарасов</h3>
-                <p class="name__job">Marketing</p>
+              <div class="team__wrap">
+                <h3 class="team__name">Николай Тарасов</h3>
+                <p class="team__job">Marketing</p>
 
                 <ul class="socials__list">
                   <li class="socials__item">
@@ -327,9 +327,9 @@
                 width="270"
                 height="260"
               />
-              <div class="name__wrap">
-                <h3 class="name">Михаил Ермаков</h3>
-                <p class="name__job" lang="en">UI Designer</p>
+              <div class="team__wrap">
+                <h3 class="team__name">Михаил Ермаков</h3>
+                <p class="team__job" lang="en">UI Designer</p>
                 <ul class="socials__list">
                   <li class="socials__item">
                     <a href="#" class="socials__link">
