--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
               <a class="nav__link" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
-               <a class="nav__link nav__link--current"  href="./portfolio.html">Портфолио</a>
+              <a class="nav__link nav__link--current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="#link">Контакты</a>
@@ -45,18 +45,18 @@
         </nav>
 
         <ul class="contact">
-          <li class="contact_item">
-            <a class="contact_link" href="mailto:info@devstudio.com">
-              <svg width="16" height="12" class="contact_icon">
+          <li class="contact__item">
+            <a class="contact__link" href="mailto:info@devstudio.com">
+              <svg width="16" height="12" class="contact__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li class="contact_item">
-            <a class="contact_link" href="tel:+380961111111">
-              <svg width="10" height="16" class="contact_icon">
+          <li class="contact__item">
+            <a class="contact__link" href="tel:+380961111111">
+              <svg width="10" height="16" class="contact__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +380961111111</a
@@ -74,7 +74,7 @@
 
           <ul class="portfolio">
             <li class="portfolio__filter">
-              <button class="button__style" type="button">Все</button>
+              <button class="button__style button__style--active" type="button">Все</button>
             </li>
             <li class="portfolio__filter">
               <button class="button__style" type="button">Веб-сайты</button>
@@ -91,17 +91,18 @@
           </ul>
 
           <ul class="portfolio__list">
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img1.jpeg"
                     alt="лептоп"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -110,24 +111,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Технокряк</h2>
-                  <p class="item__description">Веб-сайт</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Технокряк</h2>
+                  <p class="portfolio__descripion">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img2.jpeg"
                     alt="постер баскетбол"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -136,26 +137,26 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="item__description">Дизайн</p>
+                  <p class="portfolio__descripion">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img3.jpeg"
                     alt="лого ресторана"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -164,24 +165,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Ресторан Seafood</h2>
-                  <p class="item__description">Приложение</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Ресторан Seafood</h2>
+                  <p class="portfolio__descripion">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img4.jpeg"
                     alt="мокап наушники"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -190,24 +191,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Проект Prime</h2>
-                  <p class="item__description">Маркетинг</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Проект Prime</h2>
+                  <p class="portfolio__descripion">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img5.jpeg"
                     alt="мокап коробка"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -216,24 +217,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Проект Boxes</h2>
-                  <p class="item__description">Приложение</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Проект Boxes</h2>
+                  <p class="portfolio__descripion">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img6.jpeg"
                     alt="веб сайт"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -242,26 +243,26 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion" lang="en">
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title" lang="en">
                     Inspiration has no Borders
                   </h2>
-                  <p class="item__description">Веб-сайт</p>
+                  <p class="portfolio__descripion">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img7.jpeg"
                     alt="журнал"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -270,24 +271,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Издание Limited Edition</h2>
-                  <p class="item__description">Дизайн</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Издание Limited Edition</h2>
+                  <p class="portfolio__descripion">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img8.jpeg"
                     alt="бирка"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -296,24 +297,24 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion">Проект LAB</h2>
-                  <p class="item__description">Маркетинг</p>
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title">Проект LAB</h2>
+                  <p class="portfolio__descripion">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="item">
-              <a class="item__link" href="#">
-                <div class="card-thumb">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="#">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/port_img9.jpeg"
                     alt="скрин приложения"
                     width="370"
                     height="294"
                   />
-                  <div class="overlay">
-                    <p class="relation">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__relation">
                       Ресурс предлагает комплексные предложения с разным уровнем
                       функционала и сервисов. Все это позволит посетителю
                       получить исчерпывающие сведения о компании или частном
@@ -322,11 +323,11 @@
                   </div>
                 </div>
 
-                <div class="item__border">
-                  <h2 class="portfolio__descripion" lang="en">
+                <div class="portfolio__border">
+                  <h2 class="portfolio__title" lang="en">
                     Growing Business
                   </h2>
-                  <p class="item__description">Приложение</p>
+                  <p class="portfolio__descripion">Приложение</p>
                 </div>
               </a>
             </li>
